--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 numpy
 pandas
-scikit-learn
 matplotlib
-plotly
-seaborn
-ipython
-notebook
-nbformat>=4.2.0
+scikit-learn
+torch
 transformers
 datasets
-torch
-accelerate
+ipykernel
+plotly
+nbformat>=4.2.0
+accelerate>=0.26.0
