--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy
-pandas
-matplotlib
-scikit-learn
-torch
-transformers
-datasets
-ipykernel
-plotly
-nbformat>=4.2.0
-accelerate>=0.26.0
+numpy==2.2.5
+pandas==2.2.3
+matplotlib==3.10.1
+scikit-learn==1.6.1
+torch==2.7.0
+transformers==4.51.3
+datasets==3.5.1
+ipykernel==6.29.5
+plotly==6.0.1
+nbformat==5.10.4
+accelerate==1.6.0
